Se agrego estructura base
Se agrego estructura base

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configuración para PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/gymbsdev
-spring.datasource.username=nombre_usuario
-spring.datasource.password=contraseña_usuario
+spring.datasource.username=postgres
+spring.datasource.password=enoc
 
 # Configuración de JPA y Hibernate
 spring.jpa.hibernate.ddl-auto=update
